# opennextion-printsphere

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  NOTICE.md  README.md  README.zh-CN.md  RELEASE_NOTES_v0.1.0.md  sdkconfig.defaults
.github/workflows/: public-tree-check.yml
components/esp32_s3_touch_amoled_1_75/: esp32_s3_touch_amoled_1_75.c
components/esp32_s3_touch_amoled_1_75/include/bsp/: esp32_s3_touch_amoled_1_75.h
components/onx3248g035_bsp/: CMakeLists.txt
components/onx3248g035_bsp/include/: onx3248g035_bsp.h
components/onx3248g035_bsp/include/bsp/: config.h  display.h  esp32_s3_touch_amoled_1_75.h  onx3248g035_compat.h  touch.h
components/onx3248g035_bsp/src/: onx3248g035_bsp.c  onx3248g035_bsp_compat.c  onx3248g035_bsp_lvgl.c
docs/: A1_MINI_LAN_BRINGUP.md  BUILD_AND_FLASH.md  BUILD_FLASH.md  DECISIONS.md  DEV_ENV.md  M2_BSP_ACCEPTANCE.md  M3_BUILD_PROFILE_PLAN.md  M3_ONX_BSP_INTEGRATION.md  M4_ONX_BOARD_DIAGNOSTICS.md  MILESTONES.md  ONX3248G035_HARDWARE_CONFIG.md  ONX_BSP_NOTES.md  PORTING_ARCHITECTURE_BOUNDARIES.md  PROJECT_CONTEXT.md  PUBLICATION_POLICY.md  RELEASE_FLASHING.md  SUPPORTED_BOARDS.md  THREADS.md  UI_DESIGN_SPEC.md  UI_DESIGN_SPEC_LANDSCAPE.md  ui_design_landscape_preview.html  ui_design_preview.html
examples/onx_bsp_board_smoke/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/onx_bsp_board_smoke/main/: app_main.c
examples/onx_bsp_lvgl_smoke/: CMakeLists.txt  README.md
examples/onx_bsp_lvgl_smoke/main/: CMakeLists.txt  app_main.c
examples/onx_bsp_orientation_probe/: CMakeLists.txt  README.md
examples/onx_bsp_orientation_probe/main/: CMakeLists.txt  app_main.c
examples/onx_bsp_smoke/: CMakeLists.txt  README.md
examples/onx_bsp_smoke/main/: CMakeLists.txt  app_main.c
main/: CMakeLists.txt  idf_component.yml
main/include/font/: onx_cjk_16.c
main/include/printsphere/: application.hpp  board_config.hpp  config_store.hpp  esp_timer_compat.h  setup_portal.hpp  ui.hpp
main/src/: application.cpp  bambu_cloud_client.cpp  config_store.cpp  p1s_camera_client.cpp  pmu.cpp  printer_client.cpp  setup_portal.cpp  ui.cpp  wifi_manager.cpp
tools/: check_public_tree.py
tools/fonts/: README.md  generate_onx_cjk_16.py  modern_chinese_common_2500.txt  onx_extra_symbols.txt
